[project]
name = "3-3-litellm-agent-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your-email@example.com" }
]
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.72.0",
]

[project.scripts]
3-3-litellm-agent-sdk = "3_3_litellm_agent_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
